--- a/Workbook100/Views/Base.lproj/Main.storyboard
+++ b/Workbook100/Views/Base.lproj/Main.storyboard
@@ -1685,10 +1685,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b6g-bD-xCG">
-                                                    <rect key="frame" x="20" y="12.333333333333336" width="350" height="19.333333333333329"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b6g-bD-xCG">
+                                                    <rect key="frame" x="20" y="12.333333333333334" width="350" height="19.333333333333329"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" ambiguous="YES" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mcz-0d-6Yz">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mcz-0d-6Yz">
                                                             <rect key="frame" x="0.0" y="0.0" width="125" height="19.333333333333332"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="125" id="9tN-cA-De0"/>
@@ -1697,7 +1697,7 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="SKU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="teE-h6-hQN">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SKU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="teE-h6-hQN">
                                                             <rect key="frame" x="125" y="0.0" width="225" height="19.333333333333332"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                             <nil key="textColor"/>
@@ -1724,7 +1724,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NDs-Jm-eXM">
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NDs-Jm-eXM">
                                                     <rect key="frame" x="0.0" y="0.0" width="390" height="200"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ewP-Pf-XIr">
@@ -1737,11 +1737,11 @@
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="productImageCell" id="ZgZ-5r-tK9" customClass="ImageViewCollectionCell" customModule="Workbook100" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="36" width="128" height="128"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="BG6-GM-wHh">
+                                                            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="BG6-GM-wHh">
                                                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R6e-Vr-iow">
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R6e-Vr-iow">
                                                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                                     </imageView>
                                                                 </subviews>
@@ -1764,6 +1764,31 @@
                                                 <constraint firstAttribute="trailing" secondItem="NDs-Jm-eXM" secondAttribute="trailing" id="VPV-Kt-hiH"/>
                                                 <constraint firstItem="NDs-Jm-eXM" firstAttribute="top" secondItem="oYN-VI-e20" secondAttribute="top" id="fbR-gT-9Ml"/>
                                                 <constraint firstItem="NDs-Jm-eXM" firstAttribute="leading" secondItem="oYN-VI-e20" secondAttribute="leading" id="vPR-v2-HOW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Saved Lists" id="47p-em-DJn" userLabel="Saved Lists">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="18P-py-9Zb">
+                                        <rect key="frame" x="0.0" y="1258.3333301544189" width="390" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="18P-py-9Zb" id="sVe-6a-Gsq">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zJg-Ot-v2Y">
+                                                    <rect key="frame" x="20" y="12.333333333333334" width="350" height="19.333333333333329"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="zJg-Ot-v2Y" secondAttribute="trailing" id="R9F-6n-hoz"/>
+                                                <constraint firstItem="zJg-Ot-v2Y" firstAttribute="centerY" secondItem="sVe-6a-Gsq" secondAttribute="centerY" id="YeI-pE-cWN"/>
+                                                <constraint firstItem="zJg-Ot-v2Y" firstAttribute="leading" secondItem="sVe-6a-Gsq" secondAttribute="leadingMargin" id="ohN-rD-Pcy"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -1796,6 +1821,7 @@
                         <outlet property="productNameSecondaryLabel" destination="NGM-WT-qTH" id="hiO-lJ-VhG"/>
                         <outlet property="productSubtypeLabel" destination="oLv-16-ZvV" id="C3J-Ei-2hF"/>
                         <outlet property="productTypeLabel" destination="zbZ-G0-cM2" id="nF3-Y8-HKC"/>
+                        <outlet property="savedListsLabel" destination="zJg-Ot-v2Y" id="1FP-qU-S3M"/>
                         <outlet property="size0Label" destination="90t-1m-5WF" id="yUq-t1-pXr"/>
                         <outlet property="size1Label" destination="DFG-0L-Ylu" id="bWQ-NT-xn7"/>
                         <outlet property="size2Label" destination="5Nn-TZ-0JB" id="Y5J-at-PMY"/>
@@ -1825,19 +1851,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Fu-kb-9hu">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jf3-4F-Pyb">
                                 <rect key="frame" x="0.0" y="200" width="390" height="390"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="0Fu-kb-9hu" secondAttribute="height" multiplier="1:1" id="F7f-hd-yVI"/>
-                                </constraints>
-                            </imageView>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Fu-kb-9hu">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="734"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="463-WP-gap"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="vMs-FA-M1U"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wtS-PQ-YXo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="wtS-PQ-YXo" firstAttribute="trailing" secondItem="0Fu-kb-9hu" secondAttribute="trailing" id="LIm-l1-HXX"/>
-                            <constraint firstItem="0Fu-kb-9hu" firstAttribute="centerY" secondItem="Ng3-zv-wPR" secondAttribute="centerY" id="mmp-Wh-YWl"/>
-                            <constraint firstItem="0Fu-kb-9hu" firstAttribute="leading" secondItem="wtS-PQ-YXo" secondAttribute="leading" id="sbh-ob-Ql9"/>
+                            <constraint firstItem="jf3-4F-Pyb" firstAttribute="leading" secondItem="wtS-PQ-YXo" secondAttribute="leading" id="cQl-rI-h4L"/>
+                            <constraint firstItem="jf3-4F-Pyb" firstAttribute="trailing" secondItem="wtS-PQ-YXo" secondAttribute="trailing" id="f7X-uM-jJI"/>
+                            <constraint firstItem="jf3-4F-Pyb" firstAttribute="top" secondItem="wtS-PQ-YXo" secondAttribute="top" id="fxP-Q7-OjR"/>
+                            <constraint firstItem="wtS-PQ-YXo" firstAttribute="bottom" secondItem="jf3-4F-Pyb" secondAttribute="bottom" id="hw4-Rg-jJm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PeD-e7-XPB">
@@ -1849,11 +1881,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="imageView" destination="0Fu-kb-9hu" id="zw3-es-gZ9"/>
+                        <outlet property="scrollView" destination="jf3-4F-Pyb" id="CCA-T5-2VS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pYi-Ot-0DO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4263" y="-518"/>
+            <point key="canvasLocation" x="4261.538461538461" y="-518.24644549763036"/>
         </scene>
         <!--Workbook Detail Controller-->
         <scene sceneID="9o9-9K-gue">
